<resources>
    <string name="app_name">SocialApp</string>
    <string name="nav_home">Home</string>
    <string name="nav_header_title">Menu</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


    <string name="tab_item_post">Post</string>
    <string name="tab_item_info">Info</string>
    <string name="tab_item_hobby">Hobby</string>

    <string name="search_tab_item_user">Utenti</string>
    <string name="search_tab_item_group">Gruppi</string>
    <string name="btn_text_modifica">Modifica</string>
    <string name="txt_etichetta_porta">Porta</string>
    <string name="txt_etichetta_indirizzo">Indirizzo</string>
    <string name="home">Home</string>
    <string name="txt_home_1">Usa la barra di ricerca per cerare utenti e gruppi!</string>
    <string name="txt_home_2">Usa il menu laterale per tornare alla home!</string>
    <string name="txt_home_3">Dalla home puoi premere indietro per uscire!</string>
    <string name="txt_home_4">Beh... il resto puoi scoprirlo da solo!</string>
    <string name="sample_etichetta">Etichetta</string>
    <string name="sample_info">Info</string>
    <string name="sample_nome_gruppo">Nome Gruppo</string>
    <string name="sample_nome_cognome">Nome Cognome</string>
    <string name="sample_nome_hobby">Nome Hobby</string>
    <string name="txt_etichetta_data_inizio_hobby">Praticato dal</string>
    <string name="sample_data_inizio">DataInizio</string>
    <string name="sample_nome">Nome</string>
    <string name="sample_cognome">Cognome</string>
    <string name="sample_username">Username</string>
    <string name="sample_email">email@email.com</string>
    <string name="nav_title_impostazioni">Impostazioni</string>
    <string name="txt_action_search_title_search">Search</string>


</resources>
