<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.ImpostazioniActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_etichetta_indirizzo" />

    <EditText
        android:id="@+id/txtIndirizzo"
        android:layout_width="250dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_etichetta_porta" />

    <EditText
        android:id="@+id/txtPorta"
        android:layout_width="250dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnModificaImpostazioni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_text_modifica" />


</LinearLayout>