<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="3dp"
        >
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:stretchColumns="*">

            <TableRow>

                <TextView
                    android:id="@+id/txtNome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/sample_nome_hobby" />

            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/txtEtc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/txt_etichetta_data_inizio_hobby" />

                <TextView
                    android:id="@+id/txtDataInizio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/sample_data_inizio" />

            </TableRow>

        </TableLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>